@@ -33,10 +33,10 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
  * @author Sebastien Deleuze
  * @author Sam Brannen
  */
-public class CorsConfigurationTests {
+class CorsConfigurationTests {
 
 	@Test
-	public void setNullValues() {
+	void setNullValues() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.setAllowedOrigins(null);
 		assertThat(config.getAllowedOrigins()).isNull();
@@ -55,7 +55,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void setValues() {
+	void setValues() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
 		config.addAllowedOriginPattern("http://*.example.com");
@@ -71,11 +71,11 @@ public class CorsConfigurationTests {
 		assertThat(config.getAllowedMethods()).containsExactly("*");
 		assertThat(config.getExposedHeaders()).containsExactly("*");
 		assertThat(config.getAllowCredentials()).isTrue();
-		assertThat(config.getMaxAge()).isEqualTo(new Long(123));
+		assertThat(config.getMaxAge()).isEqualTo(Long.valueOf(123));
 	}
 
 	@Test
-	public void combineWithNull() {
+	void combineWithNull() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.setAllowedOrigins(Collections.singletonList("*"));
 		config.combine(null);
@@ -84,7 +84,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void combineWithNullProperties() {
+	void combineWithNullProperties() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
 		config.setAllowedOriginPatterns(Collections.singletonList("http://*.example.com"));
@@ -103,12 +103,12 @@ public class CorsConfigurationTests {
 		assertThat(config.getAllowedHeaders()).containsExactly("header1");
 		assertThat(config.getExposedHeaders()).containsExactly("header3");
 		assertThat(config.getAllowedMethods()).containsExactly(HttpMethod.GET.name());
-		assertThat(config.getMaxAge()).isEqualTo(new Long(123));
+		assertThat(config.getMaxAge()).isEqualTo(Long.valueOf(123));
 		assertThat(config.getAllowCredentials()).isTrue();
 	}
 
 	@Test  // SPR-15772
-	public void combineWithDefaultPermitValues() {
+	void combineWithDefaultPermitValues() {
 		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
 		CorsConfiguration other = new CorsConfiguration();
 		other.addAllowedOrigin("https://domain.com");
@@ -147,7 +147,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void combinePatternWithDefaultPermitValues() {
+	void combinePatternWithDefaultPermitValues() {
 		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
 		CorsConfiguration other = new CorsConfiguration();
 		other.addAllowedOriginPattern("http://*.com");
@@ -164,7 +164,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void combinePatternWithDefaultPermitValuesAndCustomOrigin() {
+	void combinePatternWithDefaultPermitValuesAndCustomOrigin() {
 		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
 		config.setAllowedOrigins(Collections.singletonList("https://domain.com"));
 
@@ -183,7 +183,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void combineWithAsteriskWildCard() {
+	void combineWithAsteriskWildCard() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
 		config.addAllowedHeader("*");
@@ -219,7 +219,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test  // SPR-14792
-	public void combineWithDuplicatedElements() {
+	void combineWithDuplicatedElements() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("https://domain1.com");
 		config.addAllowedOrigin("https://domain2.com");
@@ -249,7 +249,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void combine() {
+	void combine() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("https://domain1.com");
 		config.addAllowedOriginPattern("http://*.domain1.com");
@@ -274,14 +274,14 @@ public class CorsConfigurationTests {
 		assertThat(config.getAllowedHeaders()).containsExactly("header1", "header2");
 		assertThat(config.getExposedHeaders()).containsExactly("header3", "header4");
 		assertThat(config.getAllowedMethods()).containsExactly(HttpMethod.GET.name(), HttpMethod.PUT.name());
-		assertThat(config.getMaxAge()).isEqualTo(new Long(456));
+		assertThat(config.getMaxAge()).isEqualTo(Long.valueOf(456));
 		assertThat(config).isNotNull();
 		assertThat(config.getAllowCredentials()).isFalse();
 		assertThat(config.getAllowedOriginPatterns()).containsExactly("http://*.domain1.com", "http://*.domain2.com");
 	}
 
 	@Test
-	public void checkOriginAllowed() {
+	void checkOriginAllowed() {
 		// "*" matches
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOrigin("*");
@@ -306,7 +306,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkOriginNotAllowed() {
+	void checkOriginNotAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkOrigin(null)).isNull();
 		assertThat(config.checkOrigin("https://domain.com")).isNull();
@@ -322,7 +322,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkOriginPatternAllowed() {
+	void checkOriginPatternAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkOrigin("https://domain.com")).isNull();
 
@@ -349,7 +349,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkOriginPatternNotAllowed() {
+	void checkOriginPatternNotAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkOrigin(null)).isNull();
 		assertThat(config.checkOrigin("https://domain.com")).isNull();
@@ -367,7 +367,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkMethodAllowed() {
+	void checkMethodAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkHttpMethod(HttpMethod.GET)).containsExactly(HttpMethod.GET, HttpMethod.HEAD);
 
@@ -380,7 +380,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkMethodNotAllowed() {
+	void checkMethodNotAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkHttpMethod(null)).isNull();
 		assertThat(config.checkHttpMethod(HttpMethod.DELETE)).isNull();
@@ -390,7 +390,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkHeadersAllowed() {
+	void checkHeadersAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkHeaders(Collections.emptyList())).isEqualTo(Collections.emptyList());
 
@@ -403,7 +403,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void checkHeadersNotAllowed() {
+	void checkHeadersNotAllowed() {
 		CorsConfiguration config = new CorsConfiguration();
 		assertThat(config.checkHeaders(null)).isNull();
 		assertThat(config.checkHeaders(Collections.singletonList("header1"))).isNull();
@@ -417,7 +417,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test  // SPR-15772
-	public void changePermitDefaultValues() {
+	void changePermitDefaultValues() {
 		CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
 		config.addAllowedOrigin("https://domain.com");
 		config.addAllowedHeader("header1");
@@ -429,7 +429,7 @@ public class CorsConfigurationTests {
 	}
 
 	@Test
-	public void permitDefaultDoesntSetOriginWhenPatternPresent() {
+	void permitDefaultDoesntSetOriginWhenPatternPresent() {
 		CorsConfiguration config = new CorsConfiguration();
 		config.addAllowedOriginPattern("http://*.com");
 		config = config.applyPermitDefaultValues();
